# agent-employe

./: .env.example  .gitlab-ci.yml  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  config.example.toml  install.ps1  install.sh
.github/workflows/: release.yml
crates/activity/: Cargo.toml
crates/activity/src/: lib.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: lib.rs
crates/agent-core/src/config/: mod.rs
crates/agent-core/src/error/: mod.rs
crates/agent-core/src/models/: mod.rs
crates/client/: Cargo.toml
crates/client/src/: http.rs  lib.rs  queue.rs
crates/idle/: Cargo.toml
crates/idle/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform/src/: common.rs  lib.rs  linux.rs  macos.rs  windows.rs
crates/screenshot/: Cargo.toml
crates/screenshot/src/: lib.rs
crates/updater/: Cargo.toml
crates/updater/src/: lib.rs
docs/: AUTOSTART_CONFIGURATION.md  INSTALLATION.md  QUICK_INSTALL.md  SERVICE_INSTALLATION.md
installer-windows/: README.md  agent-setup.nsi  build-installer.ps1  license.txt
packaging/macos/: build-dmg.sh
packaging/macos/Agent.app/Contents/: Info.plist
packaging/macos/Agent.app/Contents/Resources/: uninstall.sh
scripts/: agent-rust.service  build-release.sh  com.ridwanajari.agent-rust.plist  com.yourorg.agent-rust.plist  install-service.ps1  install-service.sh  install-simple.ps1  install-simple.sh
