[workspace]
members = [
    "crates/agent-core",
    "crates/platform",
    "crates/client",
    "crates/activity",
    "crates/screenshot",
    "crates/idle",
    "crates/updater",
    "bin/agent",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Employee Monitoring Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1.83"

# Error handling
anyhow = "1.0.94"
thiserror = "2.0"
color-eyre = "0.6.3"

# Serialization
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"

# Configuration
config = "0.15"
toml = "0.8.19"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"

# HTTP client
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls", "gzip", "http2"] }

# Retry logic
backoff = "0.4.0"

# Time handling
chrono = { version = "0.4.39", features = ["serde"] }
time = "0.3.37"

# Image processing
image = { version = "0.25.5", features = ["png", "jpeg"] }
base64 = "0.22.1"

# Cross-platform utilities
sysinfo = "0.33.1"
which = "7.0.1"
dirs = "5.0.1"

# Security
secrecy = { version = "0.8", features = ["serde"] }
zeroize = "1.8.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = 3
