[package]
name = "platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
agent-core = { path = "../agent-core" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Image processing for screenshots
image = { workspace = true }

# System info
sysinfo = { workspace = true }

# Common utilities
num_cpus = "1.16"

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib", "xrandr", "xrecord"] }
libc = "0.2"
