[package]
name = "screenshot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
agent-core = { path = "../agent-core" }
platform = { path = "../platform" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Image processing
image = { workspace = true }
base64 = { workspace = true }

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib", "xrandr"] }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wingdi", "libloaderapi"] }
