[package]
name = "updater"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
agent-core = { path = "../agent-core" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# HTTP client for updates
reqwest = { workspace = true }

# Time handling
chrono = { workspace = true }

# Version comparison
semver = "1.0"

# File operations
tokio-stream = "0.1"
futures = "0.3"
